fix: overflow hidden

--- a/src/frontend/styles/globals.css
+++ b/src/frontend/styles/globals.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-::-webkit-scrollbar {
-	width: none;
+html,
+body {
+	width: 100%;
+	overflow-x: hidden;
 }
 
 .tooltip .tooltip-text {
